Revert "GOLD-82882 : Fixed overlapping panel issue. Checked-in changes on behalf of Kavya"
This reverts commit 64927275b6d03cdac5fbbdf29fcd00d28ec74e67.

--- a/jaffa-ria/source/html/js/extjs/resources/css/jaffaRia-rtl.css
+++ b/jaffa-ria/source/html/js/extjs/resources/css/jaffaRia-rtl.css
@@ -249,7 +249,6 @@ direction: rtl!important;
 /*field set*/
 .x-fieldset{
 	direction:rtl;
-    left: 0px !important;
 }
 /*grid header*/
 .x-grid3-header, .x-grid3-body {
@@ -931,15 +930,6 @@ text-align:left !important;
 /*************************************************************************************************************************
 ********************************************** Material Module Ends here ************************************************
 *************************************************************************************************************************/
-/*********************************************************
-***************Material Planning Module Starts here*******
-**********************************************************/
-#eiDetailPanel{
-   float: left;
-}
-/*********************************************************
-***************Material Planning Module Ends here*******
-**********************************************************/
 
 /*********************************************************
 ***************ASSETS MODULE STARTS HERE******************
